# postgres

contrib/: Makefile  meson.build
contrib/dblink/: dblink.c
contrib/pg_logicalinspect/: meson.build  pg_logicalinspect--1.0.sql  pg_logicalinspect.c
contrib/pg_logicalinspect/expected/: logical_inspect.out
contrib/pg_logicalinspect/specs/: logical_inspect.spec
contrib/pg_logicalsnapinspect/: Makefile  meson.build  pg_logicalsnapinspect--1.0.sql  pg_logicalsnapinspect.c  pg_logicalsnapinspect.control
contrib/pg_logicalsnapinspect/specs/: logical_snapshot_inspect.spec
contrib/pg_stat_statements/: pg_stat_statements.c
contrib/postgres_fdw/: connection.c
doc/src/sgml/: bgworker.sgml  client-auth.sgml  config.sgml  contrib.sgml  filelist.sgml  func.sgml  monitoring.sgml  pglogicalinspect.sgml  pglogicalsnapinspect.sgml
src/backend/backup/: basebackup.c
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: aclchk.c  heap.c  index.c  pg_constraint.c  pg_publication.c  system_views.sql  toasting.c
src/backend/commands/: dbcommands.c  indexcmds.c  sequence.c  subscriptioncmds.c  tablecmds.c  tablespace.c  trigger.c  vacuum.c
src/backend/executor/: execExprInterp.c
src/backend/libpq/: hba.c
src/backend/nodes/: nodeFuncs.c
src/backend/parser/: gram.y  parse_collate.c  parse_expr.c  parse_target.c
src/backend/postmaster/: autovacuum.c  bgworker.c  postmaster.c
src/backend/replication/: repl_scanner.l  slot.c  walreceiver.c  walsender.c
src/common/: file_utils.c
src/fe_utils/: astreamer_file.c
src/include/: fmgr.h  miscadmin.h  pgstat.h
(+91 files in other folders)
